--- a/Code/AgentAISemProjChatGPTMemory.ipynb
+++ b/Code/AgentAISemProjChatGPTMemory.ipynb
@@ -16,38 +16,37 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "8dMeesFY_s2b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8e876cb3-4bf9-41cd-9ddf-e18be6719d8c"
+        "outputId": "97d0d353-3701-47a5-a110-40d1e5867959"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m43.7/43.7 kB\u001b[0m \u001b[31m2.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m143.7/143.7 kB\u001b[0m \u001b[31m6.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m755.6/755.6 kB\u001b[0m \u001b[31m26.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m515.3/515.3 kB\u001b[0m \u001b[31m32.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m43.8/43.8 kB\u001b[0m \u001b[31m2.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m50.1/50.1 kB\u001b[0m \u001b[31m3.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m216.5/216.5 kB\u001b[0m \u001b[31m14.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m70.4/70.4 kB\u001b[0m \u001b[31m2.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.5/2.5 MB\u001b[0m \u001b[31m40.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m45.2/45.2 kB\u001b[0m \u001b[31m3.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m50.9/50.9 kB\u001b[0m \u001b[31m3.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m43.7/43.7 kB\u001b[0m \u001b[31m2.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m143.8/143.8 kB\u001b[0m \u001b[31m9.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m765.0/765.0 kB\u001b[0m \u001b[31m23.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m43.9/43.9 kB\u001b[0m \u001b[31m2.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m50.2/50.2 kB\u001b[0m \u001b[31m3.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m216.5/216.5 kB\u001b[0m \u001b[31m15.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m70.6/70.6 kB\u001b[0m \u001b[31m2.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2.5/2.5 MB\u001b[0m \u001b[31m40.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m45.2/45.2 kB\u001b[0m \u001b[31m2.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m50.9/50.9 kB\u001b[0m \u001b[31m3.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h"
           ]
         }
       ],
       "source": [
-        "#!pip install -U langgraph langchain  openai huggingface_hub --quiet\n",
-        "#!pip install -U langchain-openai --quiet\n",
-        "#!pip install -U langchain-community --quiet\n"
+        "!pip install -U langgraph langchain  openai huggingface_hub --quiet\n",
+        "!pip install -U langchain-openai --quiet\n",
+        "!pip install -U langchain-community --quiet\n"
       ]
     },
     {
@@ -55,13 +54,15 @@
       "source": [
         "import openai\n",
         "import os\n",
+        "from google.colab import userdata\n",
         "\n",
-        "openai.api_key = \"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\""
+        "\n",
+        "openai.api_key =userdata.get('OPEN_API_KEY')"
       ],
       "metadata": {
         "id": "3uDC681S_zmh"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -89,7 +90,7 @@
       "metadata": {
         "id": "_fgfcu5n_6SE"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -107,7 +108,7 @@
       "metadata": {
         "id": "MfkVu_NjppdN"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -137,7 +138,7 @@
       "metadata": {
         "id": "pC_AS400wVkt"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -164,7 +165,7 @@
       "metadata": {
         "id": "sXej9mVWuF_3"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -200,15 +201,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "52d3a3c7-0011-4b0f-cd87-ca8a4e39c2f1"
+        "outputId": "16c15228-8fba-4422-b84b-b31a0cfcf08b"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/tmp/ipython-input-11-1066192067.py:2: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import ChatOpenAI``.\n",
+            "/tmp/ipython-input-13-1066192067.py:2: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 1.0. An updated version of the class exists in the :class:`~langchain-openai package and should be used instead. To use it run `pip install -U :class:`~langchain-openai` and import as `from :class:`~langchain_openai import ChatOpenAI``.\n",
             "  llm = ChatOpenAI(model=\"gpt-4\", temperature=0.3, openai_api_key=openai.api_key)\n"
           ]
         }
@@ -234,7 +235,7 @@
       "metadata": {
         "id": "Cl3DUD1E_8PD"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -259,7 +260,7 @@
       "metadata": {
         "id": "oluO4jrRAAGB"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -290,9 +291,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Lt_NiYpUwki2",
-        "outputId": "b34f8325-918b-437d-8344-981cc9c9de5f"
+        "outputId": "d3bf2305-ab78-4ea9-ad2a-784acf845338"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -306,9 +307,9 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "/tmp/ipython-input-9-3375322124.py:10: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
+            "/tmp/ipython-input-11-3375322124.py:10: LangChainDeprecationWarning: The class `LLMChain` was deprecated in LangChain 0.1.17 and will be removed in 1.0. Use :meth:`~RunnableSequence, e.g., `prompt | llm`` instead.\n",
             "  chain = LLMChain(llm=llm, prompt=prompt)\n",
-            "/tmp/ipython-input-9-3375322124.py:12: LangChainDeprecationWarning: The method `Chain.run` was deprecated in langchain 0.1.0 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
+            "/tmp/ipython-input-11-3375322124.py:12: LangChainDeprecationWarning: The method `Chain.run` was deprecated in langchain 0.1.0 and will be removed in 1.0. Use :meth:`~invoke` instead.\n",
             "  result = chain.run(anomalies=state[\"anomalies\"])\n"
           ]
         },
@@ -319,56 +320,54 @@
             "[USER]: Detected anomalies in system metrics:\n",
             "\n",
             "       cpu     memory    disk_io  anomaly\n",
-            "240.523115 253.831366 273.516742       -1\n",
-            "249.129242 266.002923 295.341864       -1\n",
-            "244.896667 260.474992 241.647476       -1\n",
-            "255.505014 265.809492 262.202908       -1\n",
-            "249.727892 252.668653 245.781577       -1\n",
+            "222.084508 217.853534 262.411635       -1\n",
+            "231.252957 245.023815 269.386036       -1\n",
+            "225.339937 227.214063 291.348540       -1\n",
+            "226.897169 239.585032 285.333456       -1\n",
+            "223.484506 248.074496 269.922889       -1\n",
             "Explain possible causes, system impact, and recommended actions.\n",
             "\n",
             "[ASSISTANT]: Possible Causes:\n",
-            "1. High CPU usage: This could be due to some processes or applications consuming excessive CPU resources. \n",
-            "2. High Memory usage: This could be due to memory leaks in applications or too many applications running simultaneously.\n",
-            "3. High Disk IO: This could be due to excessive read/write operations on the disk, possibly due to some heavy applications or processes.\n",
+            "1. High CPU usage: This could be due to a large number of processes running simultaneously, a single process consuming a large amount of CPU, or a CPU-intensive task such as data processing or video encoding.\n",
+            "2. High Memory usage: This could be due to memory leaks in applications, too many applications running simultaneously, or large data sets being processed.\n",
+            "3. High Disk IO: This could be due to large amounts of data being read from or written to the disk, such as during a backup operation, large file transfers, or heavy database operations.\n",
             "\n",
             "System Impact:\n",
-            "1. High CPU usage can slow down the system and cause applications to respond slowly.\n",
-            "2. High Memory usage can cause the system to slow down, freeze, or even crash if it runs out of memory.\n",
-            "3. High Disk IO can cause the system to slow down and degrade the lifespan of the hard disk.\n",
+            "1. High CPU usage can cause the system to slow down, become unresponsive, or even crash if the CPU becomes overheated.\n",
+            "2. High Memory usage can also slow down the system, as the system may start swapping data to disk when it runs out of physical memory, which is much slower.\n",
+            "3. High Disk IO can slow down data access and overall system performance, as other processes have to wait for disk access.\n",
             "\n",
             "Recommended Actions:\n",
-            "1. High CPU usage: Identify the processes or applications that are consuming high CPU and optimize or limit their usage. If necessary, consider upgrading the CPU.\n",
-            "2. High Memory usage: Identify the applications causing memory leaks and fix them. If necessary, consider adding more memory to the system.\n",
-            "3. High Disk IO: Identify the processes causing high disk IO and optimize them. Consider using a faster disk or SSD if the disk IO is consistently high.\n",
+            "1. High CPU usage: Identify the processes that are consuming the most CPU and determine if they are necessary. If not, consider terminating them. If they are necessary, consider optimizing them or upgrading the CPU.\n",
+            "2. High Memory usage: Identify the processes that are consuming the most memory and determine if they are necessary. If not, consider terminating them. If they are necessary, consider optimizing them or adding more memory to the system.\n",
+            "3. High Disk IO: Identify the processes that are causing the high disk IO and determine if they are necessary. If not, consider terminating them. If they are necessary, consider optimizing them or upgrading to a faster disk.\n",
             "\n",
             "\n",
             " Run 2\n",
             "[USER]: Detected anomalies in system metrics:\n",
             "\n",
             "       cpu     memory    disk_io  anomaly\n",
-            "201.660397 210.734409 290.883586       -1\n",
-            "199.455262 207.001088 232.371224       -1\n",
-            "228.289159 210.560633 218.448125       -1\n",
-            "194.223163 178.411210 236.481189       -1\n",
-            "194.834252 182.423399 265.714304       -1\n",
+            "186.415741 179.146839 262.612216       -1\n",
+            "196.075107 206.193554 240.071907       -1\n",
+            "173.521075 182.676524 238.282461       -1\n",
+            "193.955936 193.854082 211.350487       -1\n",
+            "176.404852 200.583875 245.275149       -1\n",
             "Explain possible causes, system impact, and recommended actions.\n",
             "\n",
             "[ASSISTANT]: Possible Causes:\n",
-            "1. High CPU usage: This could be due to a process or application consuming more CPU resources than expected. It could also be due to a malware attack.\n",
-            "2. High Memory usage: This could be due to a memory leak in an application or a process consuming more memory than expected.\n",
-            "3. High Disk IO: This could be due to excessive read/write operations on the disk. It could be due to a process or application consuming more disk resources than expected.\n",
+            "1. High CPU Usage: This could be due to a large number of processes running simultaneously, or a single process consuming a significant amount of resources.\n",
+            "2. High Memory Usage: This could be due to memory leaks in applications, or too many applications running at the same time.\n",
+            "3. High Disk IO: This could be due to excessive reading/writing operations to the disk, which could be caused by large file transfers, or a high number of small, random reads and writes.\n",
             "\n",
             "System Impact:\n",
-            "1. High CPU usage can slow down the system and make it unresponsive.\n",
-            "2. High Memory usage can lead to system crashes or slow performance due to swapping.\n",
-            "3. High Disk IO can slow down the system and cause disk wear.\n",
+            "1. High CPU Usage: This can cause the system to slow down, and in extreme cases, it can cause the system to freeze or crash.\n",
+            "2. High Memory Usage: This can cause the system to become slow and unresponsive. If the system runs out of memory, it may start using swap space on the hard drive, which is much slower than RAM.\n",
+            "3. High Disk IO: This can slow down the system, as the disk is unable to keep up with the read/write requests. It can also cause wear and tear on the disk, shortening its lifespan.\n",
             "\n",
             "Recommended Actions:\n",
-            "1. Identify the process or application causing high CPU usage and optimize it. If it's a malware, use an antivirus to remove it.\n",
-            "2. Identify the process or application causing high memory usage and fix the memory leak or optimize it.\n",
-            "3. Identify the process or application causing high Disk IO and optimize it. Consider using SSDs for high IO operations.\n",
-            "4. Monitor system metrics regularly to detect anomalies early.\n",
-            "5. Consider upgrading the system hardware if it's consistently under high load.\n",
+            "1. High CPU Usage: Identify the processes that are using the most CPU and determine if they are necessary. If they are not, consider terminating them. If they are necessary, consider optimizing them or upgrading your CPU.\n",
+            "2. High Memory Usage: Identify the applications that are using the most memory and determine if they are necessary. If they are not, consider terminating them. If they are necessary, consider optimizing them or upgrading your RAM.\n",
+            "3. High Disk IO: Identify the processes that are causing the high disk IO and determine if they are necessary. If they are not, consider terminating them. If they are necessary, consider optimizing them or upgrading your disk. Also, consider using a disk with a higher IO capacity.\n",
             "\n"
           ]
         }
