--- a/Benchmarking/AgentAISemProjGemini.ipynb
+++ b/Benchmarking/AgentAISemProjGemini.ipynb
@@ -1,54 +1,45 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "code",
-      "source": [
-        "!pip install -U langchain google-generativeai pandas numpy scikit-learn --quiet"
-      ],
+      "execution_count": 108,
       "metadata": {
         "id": "qgNwkm0Ub7Ei"
       },
-      "execution_count": 108,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!pip install -U langchain google-generativeai pandas numpy scikit-learn --quiet"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install -U langchain-openai --quiet\n"
-      ],
+      "execution_count": 109,
       "metadata": {
         "id": "yEwJGgPuzqPn"
       },
-      "execution_count": 109,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!pip install -U langchain-openai --quiet\n"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pip install langchain-community --quiet"
-      ],
+      "execution_count": 110,
       "metadata": {
         "id": "yu0Ir7ELl_G3"
       },
-      "execution_count": 110,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!pip install langchain-community --quiet"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 111,
+      "metadata": {
+        "id": "6zD9pE3YjlMj"
+      },
+      "outputs": [],
       "source": [
         "import os\n",
         "import pandas as pd\n",
@@ -59,31 +50,34 @@
         "from huggingface_hub import login\n",
         "from typing import Any\n",
         "from dataclasses import dataclass"
-      ],
-      "metadata": {
-        "id": "6zD9pE3YjlMj"
-      },
-      "execution_count": 111,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "8-FlUS84t-ho"
+      },
+      "outputs": [],
       "source": [
         "import os\n",
         "import google.generativeai as genai\n",
         "\n",
-        "os.environ[\"HUGGINGFACEHUB_API_TOKEN\"] = \"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\"\n",
+        "from google.colab import userdata\n",
+        "\n",
+        "\n",
+        "os.environ[\"HUGGINGFACEHUB_API_TOKEN\"] = userdata.get('HUGGINGFACEHUB_API_TOKEN')\n",
         "os.environ[\"GOOGLE_API_KEY\"] = \"AIzaSyD2t6GARAf_tgjN2ISqQhf4_EBInsRqxRM\"\n",
         "genai.configure(api_key=os.environ[\"GOOGLE_API_KEY\"])\n"
-      ],
-      "metadata": {
-        "id": "8-FlUS84t-ho"
-      },
-      "execution_count": 112,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 113,
+      "metadata": {
+        "id": "siA2Iwj4zBKA"
+      },
+      "outputs": [],
       "source": [
         "from langchain_core.language_models.llms import LLM\n",
         "from pydantic import PrivateAttr\n",
@@ -106,15 +100,15 @@
         "    def _call(self, prompt: str, stop=None, run_manager=None, **kwargs) -> str:\n",
         "        response = self._client.generate_content(prompt)\n",
         "        return response.text"
-      ],
-      "metadata": {
-        "id": "siA2Iwj4zBKA"
-      },
-      "execution_count": 113,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 114,
+      "metadata": {
+        "id": "BpfyUklVSUmN"
+      },
+      "outputs": [],
       "source": [
         "from langchain.prompts import PromptTemplate\n",
         "\n",
@@ -131,64 +125,11 @@
         "- Recommend remediation steps.\n",
         "\"\"\")\n",
         "llm_chain = prompt | GeminiLLM()\n"
-      ],
-      "metadata": {
-        "id": "BpfyUklVSUmN"
-      },
-      "execution_count": 114,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "import pandas as pd\n",
-        "import random\n",
-        "import time\n",
-        "from sklearn.ensemble import IsolationForest\n",
-        "\n",
-        "# Simulate synthetic system metrics\n",
-        "def generate_anomalies():\n",
-        "    df = pd.DataFrame({\n",
-        "        'cpu': [random.gauss(50, 10) for _ in range(100)],\n",
-        "        'memory': [random.gauss(60, 15) for _ in range(100)],\n",
-        "        'disk_io': [random.gauss(100, 25) for _ in range(100)]\n",
-        "    })\n",
-        "    df.iloc[95:100] += random.uniform(100, 200)  # Inject anomalies\n",
-        "    model = IsolationForest(contamination=0.05, random_state=42)\n",
-        "    model.fit(df)\n",
-        "    df[\"anomaly\"] = model.predict(df)\n",
-        "    return df[df[\"anomaly\"] == -1]\n",
-        "\n",
-        "# Evaluate performance\n",
-        "def evaluate_output(text: str, keywords: list[str]) -> int:\n",
-        "    return sum(1 for kw in keywords if kw.lower() in text.lower())\n",
-        "\n",
-        "# Run the full pipeline\n",
-        "anomalies_df = generate_anomalies()\n",
-        "\n",
-        "if anomalies_df.empty:\n",
-        "    print(\"✅ No anomalies detected.\")\n",
-        "else:\n",
-        "    anomaly_text = anomalies_df.to_string(index=False)\n",
-        "\n",
-        "    # Measure latency\n",
-        "    print(\"🚀 Calling Gemini for explanation...\\n\")\n",
-        "    start = time.time()\n",
-        "    result = llm_chain.invoke({\"anomaly_text\": anomaly_text})\n",
-        "    duration = round(time.time() - start, 2)\n",
-        "\n",
-        "    # Print output\n",
-        "    print(\"🧠 Gemini Output:\\n\")\n",
-        "    print(result)\n",
-        "\n",
-        "    # Keyword coverage evaluation\n",
-        "    keywords = [\"cpu\", \"memory\", \"disk\", \"impact\", \"remediation\", \"cause\"]\n",
-        "    score = evaluate_output(result, keywords)\n",
-        "\n",
-        "    print(\"\\n📊 Evaluation Report:\")\n",
-        "    print(f\"⏱️ Latency: {duration} seconds\")\n",
-        "    print(f\"✅ Keyword Coverage: {score}/{len(keywords)}\")\n"
-      ],
+      "execution_count": 115,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -197,11 +138,10 @@
         "id": "TJCAQf6qSXm5",
         "outputId": "4b6cb77c-21ca-45c4-d382-6aa55c645b55"
       },
-      "execution_count": 115,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "🚀 Calling Gemini for explanation...\n",
             "\n",
@@ -256,7 +196,70 @@
             "✅ Keyword Coverage: 6/6\n"
           ]
         }
+      ],
+      "source": [
+        "import pandas as pd\n",
+        "import random\n",
+        "import time\n",
+        "from sklearn.ensemble import IsolationForest\n",
+        "\n",
+        "# Simulate synthetic system metrics\n",
+        "def generate_anomalies():\n",
+        "    df = pd.DataFrame({\n",
+        "        'cpu': [random.gauss(50, 10) for _ in range(100)],\n",
+        "        'memory': [random.gauss(60, 15) for _ in range(100)],\n",
+        "        'disk_io': [random.gauss(100, 25) for _ in range(100)]\n",
+        "    })\n",
+        "    df.iloc[95:100] += random.uniform(100, 200)  # Inject anomalies\n",
+        "    model = IsolationForest(contamination=0.05, random_state=42)\n",
+        "    model.fit(df)\n",
+        "    df[\"anomaly\"] = model.predict(df)\n",
+        "    return df[df[\"anomaly\"] == -1]\n",
+        "\n",
+        "# Evaluate performance\n",
+        "def evaluate_output(text: str, keywords: list[str]) -> int:\n",
+        "    return sum(1 for kw in keywords if kw.lower() in text.lower())\n",
+        "\n",
+        "# Run the full pipeline\n",
+        "anomalies_df = generate_anomalies()\n",
+        "\n",
+        "if anomalies_df.empty:\n",
+        "    print(\"✅ No anomalies detected.\")\n",
+        "else:\n",
+        "    anomaly_text = anomalies_df.to_string(index=False)\n",
+        "\n",
+        "    # Measure latency\n",
+        "    print(\"🚀 Calling Gemini for explanation...\\n\")\n",
+        "    start = time.time()\n",
+        "    result = llm_chain.invoke({\"anomaly_text\": anomaly_text})\n",
+        "    duration = round(time.time() - start, 2)\n",
+        "\n",
+        "    # Print output\n",
+        "    print(\"🧠 Gemini Output:\\n\")\n",
+        "    print(result)\n",
+        "\n",
+        "    # Keyword coverage evaluation\n",
+        "    keywords = [\"cpu\", \"memory\", \"disk\", \"impact\", \"remediation\", \"cause\"]\n",
+        "    score = evaluate_output(result, keywords)\n",
+        "\n",
+        "    print(\"\\n📊 Evaluation Report:\")\n",
+        "    print(f\"⏱️ Latency: {duration} seconds\")\n",
+        "    print(f\"✅ Keyword Coverage: {score}/{len(keywords)}\")\n"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
