--- a/Benchmarking/AgentAISemProjGemini.ipynb
+++ b/Benchmarking/AgentAISemProjGemini.ipynb
@@ -67,7 +67,7 @@
         "\n",
         "\n",
         "os.environ[\"HUGGINGFACEHUB_API_TOKEN\"] = userdata.get('HUGGINGFACEHUB_API_TOKEN')\n",
-        "os.environ[\"GOOGLE_API_KEY\"] = \"AIzaSyD2t6GARAf_tgjN2ISqQhf4_EBInsRqxRM\"\n",
+        "os.environ[\"GOOGLE_API_KEY\"] = \"abc\"\n",
         "genai.configure(api_key=os.environ[\"GOOGLE_API_KEY\"])\n"
       ]
     },
